Adding some more components

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
-    "vue-cli": "^2.9.6"
+    "vue-cli": "^2.9.6",
+    "vue-material-design-icons": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
