--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "core-js": "^3.3.2",
     "timeline-vuejs": "^1.0.9",
     "vue": "^2.6.10",
-    "vue-axios": "^2.1.5",
     "vue-cli": "^2.9.6",
     "vue-material-design-icons": "^4.1.0",
-    "vue-scroll-reveal": "^1.0.11"
+    "vue-scroll-reveal": "^1.0.11",
+    "vue2-github-corners": "^0.1.12"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
